--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.0",
     "jsonfile": "^6.1.0",
     "vite": "^3.2.5",
-    "vite-plugin-pwa": "^0.19.7"
+    "vite-plugin-pwa": "^0.19.7",
+    "rollup-plugin-output-manifest": "^2.0.0"
   }
 }
