--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 
-REACT_APP_BASE_URL=https://laos-his.gov.la/fhis
-REACT_APP_USERNAME=demo0603dh
-REACT_APP_PASSWORD=District1#
+VITE_BASE_URL=https://laos-his.gov.la/fhis
+VITE_USERNAME=
+VITE_PASSWORD=
 
 
-# REACT_APP_BASE_URL=https://dhis2.la/fhis
-# REACT_APP_USERNAME=
-# REACT_APP_PASSWORD=
+# VITE_BASE_URL=https://dhis2.la/fhis
+# VITE_USERNAME=
+# VITE_PASSWORD=
 
-# REACT_APP_BASE_URL=
-# REACT_APP_USERNAME=
-# REACT_APP_PASSWORD=
+# VITE_BASE_URL=
+# VITE_USERNAME=
+# VITE_PASSWORD=
