--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 VITE_BASE_URL=https://laos-his.gov.la/fhis
-VITE_USERNAME=
-VITE_PASSWORD=
+VITE_USERNAME=demo0603dh
+VITE_PASSWORD=District1#
 
 
 # VITE_BASE_URL=https://dhis2.la/fhis
