--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "postbuild": "node postbuild.js && cd dist && bestzip pwa_dhis2.zip *",
+    "postbuild": "node postbuild.js && export NODE_OPTIONS=--max-old-space-size=32768 && cd dist && bestzip pwa_dhis2.zip *",
     "generate-pwa-assets": "pwa-assets-generator --preset minimal public/logo.svg"
   },
   "dependencies": {
