--- a/package.json
+++ b/package.json
@@ -4,17 +4,12 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "cross-env VITE_BASE_URL=../../.. VITE_USERNAME= VITE_PASSWORD= vite build",
     "preview": "vite preview",
-    "postbuild": "node postbuild.js && export NODE_OPTIONS=--max-old-space-size=32768 && cd dist && bestzip pwa_dhis2.zip *",
+    "postbuild": "node postbuild.js && cd dist && bestzip pwa_dhis2.zip *",
     "generate-pwa-assets": "pwa-assets-generator --preset minimal public/logo.svg"
   },
   "dependencies": {
-    "@vite-pwa/assets-generator": "^0.2.4",
-    "sharp": "^0.33.3",
-    "workbox-recipes": "^6.2.4",
-    "workbox-routing": "^6.2.4",
-    "workbox-strategies": "^6.2.4",
     "@ant-design/icons": "^5.2.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@date-io/date-fns": "1.x",
@@ -32,6 +27,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@vite-pwa/assets-generator": "^0.2.4",
     "antd": "^5.12.5",
     "axios": "^1.2.2",
     "babel-preset-es2015": "^6.24.1",
@@ -73,6 +69,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "serve": "^14.2.1",
+    "sharp": "^0.33.3",
     "styled-jsx": "^3.3.0",
     "svg2pdf.js": "^2.2.3",
     "typeface-roboto": "^0.0.75",
@@ -81,6 +78,9 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "workbox-precaching": "^7.0.0",
+    "workbox-recipes": "^6.2.4",
+    "workbox-routing": "^6.2.4",
+    "workbox-strategies": "^6.2.4",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
@@ -88,14 +88,15 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "bestzip": "^2.2.1",
+    "cross-env": "^7.0.3",
+    "d2-manifest": "^1.0.0",
     "dotenv": "^16.0.0",
     "jsonfile": "^6.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "rollup-plugin-output-manifest": "^2.0.0",
+    "sw-toolbox": "^3.6.0",
     "vite": "^3.2.5",
     "vite-plugin-pwa": "^0.19.7",
-    "rollup-plugin-output-manifest": "^2.0.0",
-    "d2-manifest": "^1.0.0",
-    "redux-devtools-extension": "^2.13.9",
-    "sw-toolbox": "^3.6.0",
     "webpack-cli": "^5.1.4"
   }
 }
