5780: Fix orgnit selector don't show selected (#6)
* show checked orgUnit, add select multiple for ou selector

* add limit seleted orgunit

* minor fixes

--- a/manifest.webapp.json
+++ b/manifest.webapp.json
@@ -1,6 +1,6 @@
 {
-  "name": "Family Information V2 PWA",
-  "short_name": "FIv2 PWA",
+  "name": "Family Information V2",
+  "short_name": "FIv2",
   "description": "FIv2 - Progressive Web App.",
   "background_color": "#5a0fc8",
   "theme_color": "#5a0fc8",
