--- a/manifest.webapp.json
+++ b/manifest.webapp.json
@@ -39,8 +39,7 @@
       "type": "image/png"
     }
   ],
-
-  "start_url": ".",
+  "start_url": "./index.html",
   "launch_path": "index.html",
   "default_locale": "en",
   "activities": {
