--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "sw-toolbox": "^3.6.0",
     "vite": "^3.2.5",
     "vite-plugin-pwa": "^0.19.7",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "workbox-core": "^7.1.0"
   }
 }
