--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
-    "build": "cross-env VITE_BASE_URL=../../.. VITE_USERNAME= VITE_PASSWORD= vite build",
+    "build": "cross-env VITE_MODE=production VITE_BASE_URL=../../.. VITE_USERNAME= VITE_PASSWORD= vite build",
     "preview": "vite preview",
     "postbuild": "node postbuild.js && cd dist && bestzip pwa_dhis2.zip *",
     "generate-pwa-assets": "pwa-assets-generator --preset minimal public/logo.svg"
