--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vite-pwa-fi",
   "private": true,
   "version": "0.0.1",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "cross-env VITE_MODE=production VITE_BASE_URL=../../.. VITE_USERNAME= VITE_PASSWORD= vite build",
