--- a/manifest.webapp.json
+++ b/manifest.webapp.json
@@ -1,6 +1,6 @@
 {
   "name": "Family Information V2",
-  "short_name": "Family Information V2",
+  "short_name": "FIv2 PWA",
   "description": "Family Information V2",
   "background_color": "#5a0fc8",
   "theme_color": "#5a0fc8",
