--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,10 @@
 .pnp.js
 
 # log
-<<<<<<< HEAD
 debug*
-=======
+debug_*
 debug.log
 debug.json
->>>>>>> a6efcb785e0a3ff9e5a2d5ff4a104489e0bfd5ad
 error.log
 
 # testing
