--- a/manifest.webapp.json
+++ b/manifest.webapp.json
@@ -1,7 +1,7 @@
 {
-  "name": "Family Information V2",
+  "name": "Household Information V2",
   "short_name": "FIv2 PWA",
-  "description": "Family Information V2",
+  "description": "Household Information V2",
   "background_color": "#5a0fc8",
   "theme_color": "#5a0fc8",
   "display": "standalone",
