--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "notistack": "^1.0.0",
+    "photoswipe": "^5.4.4",
     "prettier": "^2.2.1",
     "qs": "^6.9.4",
     "query-string": "^7.0.0",
