--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "clean-webpack-plugin": "^4.0.0",
+    "clsx": "^2.1.1",
     "connected-react-router": "^6.9.1",
     "copy-webpack-plugin": "^11.0.0",
     "date-fns": "^2.15.0",
@@ -73,6 +74,7 @@
     "sharp": "^0.33.3",
     "styled-jsx": "^3.3.0",
     "svg2pdf.js": "^2.2.3",
+    "tailwind-merge": "^3.3.1",
     "typeface-roboto": "^0.0.75",
     "web-vitals": "^2.1.4",
     "webpack": "^5.88.2",
@@ -89,14 +91,17 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.21",
     "bestzip": "^2.2.1",
     "cross-env": "^7.0.3",
     "d2-manifest": "^1.0.0",
     "dotenv": "^16.0.0",
     "jsonfile": "^6.1.0",
+    "postcss": "^8.5.6",
     "redux-devtools-extension": "^2.13.9",
     "rollup-plugin-output-manifest": "^2.0.0",
     "sw-toolbox": "^3.6.0",
+    "tailwindcss": "3",
     "vite": "^3.2.5",
     "vite-plugin-pwa": "^0.19.7",
     "webpack-cli": "^5.1.4",
