--- a/manifest.webapp.json
+++ b/manifest.webapp.json
@@ -2,8 +2,8 @@
   "name": "PMNP scorecard app",
   "short_name": "PMNP scorecard app",
   "description": "PMNP scorecard app",
-  "background_color": "#5a0fc8",
-  "theme_color": "#5a0fc8",
+  "background_color": "#f68e22",
+  "theme_color": "#f68e22",
   "display": "standalone",
   "version": "1.0.65",
   "icons": [
