Imrpove App perform and write UT for getMaxHHMemberID

--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "vite-pwa-fi",
   "private": true,
-  "version": "0.0.18",
+  "version": "0.0.22",
   "scripts": {
+    "dev": "vite",
     "start": "vite",
-    "prebuild": "node scripts/bump-version.js",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "prebuild": "npm run test:run && node scripts/bump-version.js",
     "build": "cross-env VITE_MODE=production VITE_BASE_URL=../../.. VITE_USERNAME= VITE_PASSWORD= vite build",
     "build:no-bump": "cross-env VITE_MODE=production VITE_BASE_URL=../../.. VITE_USERNAME= VITE_PASSWORD= vite build",
     "preview": "vite preview",
@@ -17,7 +22,6 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@date-io/date-fns": "1.x",
     "@date-io/moment": "^1.3.13",
     "@dhis2/app-runtime": "^2.2.2",
@@ -30,27 +34,19 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.3.10",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "@vite-pwa/assets-generator": "^0.2.4",
     "antd": "^5.25.4",
     "axios": "^1.2.2",
-    "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^5.3.2",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
-    "clean-webpack-plugin": "^4.0.0",
     "clsx": "^2.1.1",
     "connected-react-router": "^6.9.1",
-    "copy-webpack-plugin": "^11.0.0",
     "date-fns": "^2.15.0",
     "dexie": "^3.2.5",
     "dhis2-uid": "^0.1.2",
-    "file-loader": "^6.2.0",
     "highcharts": "^8.2.0",
     "highcharts-react-official": "^3.0.0",
-    "html-webpack-plugin": "^5.5.3",
     "i18next": "^19.6.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
@@ -58,7 +54,6 @@
     "moment": "^2.27.0",
     "notistack": "^1.0.0",
     "photoswipe": "^5.4.4",
-    "prettier": "^2.2.1",
     "qs": "^6.9.4",
     "query-string": "^7.0.0",
     "react": "18.2.0",
@@ -71,47 +66,58 @@
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "serve": "^14.2.1",
-    "sharp": "^0.33.3",
-    "styled-jsx": "^3.3.0",
     "svg2pdf.js": "^2.2.3",
     "tailwind-merge": "^3.3.1",
-    "typeface-roboto": "^0.0.75",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
     "workbox-precaching": "^7.0.0",
     "workbox-recipes": "^6.2.4",
     "workbox-routing": "^6.2.4",
     "workbox-strategies": "^6.2.4",
-    "workbox-webpack-plugin": "^7.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/ui": "^1.0.0",
     "autoprefixer": "^10.4.21",
+    "babel-preset-es2015": "^6.24.1",
     "bestzip": "^2.2.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "d2-manifest": "^1.0.0",
     "dotenv": "^16.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.3",
+    "jsdom": "^23.0.0",
     "jsonfile": "^6.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
+    "prettier": "^3.0.0",
+    "react-scripts": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "rollup-plugin-output-manifest": "^2.0.0",
+    "serve": "^14.2.1",
+    "sharp": "^0.33.3",
+    "styled-jsx": "^3.3.0",
     "sw-toolbox": "^3.6.0",
     "tailwindcss": "3",
-    "vite": "^3.2.5",
+    "vite": "^5.0.0",
     "vite-plugin-pwa": "^0.19.7",
+    "vitest": "^1.0.0",
+    "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "workbox-core": "^7.1.0"
+    "webpack-dev-server": "^4.15.1",
+    "workbox-core": "^7.1.0",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
