--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "version:major": "node scripts/bump-version.js major"
   },
   "dependencies": {
+    "@ant-design/colors": "^7.2.1",
     "@ant-design/icons": "^5.2.6",
     "@date-io/date-fns": "1.x",
     "@date-io/moment": "^1.3.13",
     "@dhis2/app-runtime": "^2.2.2",
     "@dhis2/d2-i18n": "^1.0.6",
     "@dhis2/ui": "^5.6.1",
+    "@dhis2/ui-widgets": "^6.24.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -43,10 +45,12 @@
     "clsx": "^2.1.1",
     "connected-react-router": "^6.9.1",
     "date-fns": "^2.15.0",
+    "dayjs": "^1.11.18",
     "dexie": "^3.2.5",
     "dhis2-uid": "^0.1.2",
     "highcharts": "^8.2.0",
     "highcharts-react-official": "^3.0.0",
+    "history": "^4.10.1",
     "i18next": "^19.6.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
@@ -54,6 +58,7 @@
     "moment": "^2.27.0",
     "notistack": "^1.0.0",
     "photoswipe": "^5.4.4",
+    "prop-types": "^15.8.1",
     "qs": "^6.9.4",
     "query-string": "^7.0.0",
     "react": "18.2.0",
