--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-pwa-fi",
   "private": true,
-  "version": "0.0.58",
+  "version": "0.0.59",
   "scripts": {
     "dev": "vite",
     "start": "vite",
@@ -123,6 +123,7 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "workbox-core": "^7.1.0",
-    "workbox-webpack-plugin": "^7.0.0"
+    "workbox-webpack-plugin": "^7.0.0",
+    "workbox-window": "^7.3.0"
   }
 }
