--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,34 @@
-# Angular specific
-/dist/
-/out-tsc/
-/tmp/
-/coverage/
-/e2e/test-output/
-/.angular/
-.angular/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Node modules and dependency files
-/node_modules/
-/package-lock.json
-/yarn.lock
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Environment files
-/.env
+# log
+debug*
+debug_*
+debug.log
+debug.json
+error.log
 
-# Angular CLI and build artefacts
-/.angular-cli.json
-/.ng/
+# testing
+/coverage
 
-# TypeScript cache
-*.tsbuildinfo
+# production
+/build
+/dist
 
-# Logs
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+.env
